tests/files/flow_controller_tests/should_run/100.cmdr
x = 8.8;
print arcsec(x);