tests/files/flow_controller_tests/should_fail/070.cmdr
x = true;
print csch(x);